2009-06-19  Juanma Barranquero  <lekktu@gmail.com>

	* international/fontset.el (setup-default-fontset):
	Fix typo in previous change.

2009-06-19  Kenichi Handa  <handa@m17n.org>

	* international/fontset.el (setup-default-fontset): Add a spec of
	non-OTF unicode font for Thai.

	* fringe.el: Add coding: utf-8 cookie.

2009-06-18  Kenichi Handa  <handa@m17n.org>

	* language/korean.el (korean-cp949): New coding system.  Set cp949
	as an alias to it.

2009-06-18  Ulrich Mueller  <ulm@gentoo.org>

	* pgg-gpg.el (pgg-gpg-lookup-key-owner): Handle colon listings
	format used by GnuPG 2.0.11.

2009-06-18  Glenn Morris  <rgm@gnu.org>

	* files.el (dir-locals-set-directory-class): Make mtime argument
	optional, since it is always unneeded in the non-file case.  (Bug#3577)

2009-06-18  Kenichi Handa  <handa@m17n.org>

	* language/korean.el ("Korean"): Fix `documentation' property of
	this language environment.

	* language/korea-util.el (korean-key-bindings): Add binding for
	key Hangul.

2009-06-17  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Comment out 2007-07-25 change adding support for Maven error
	messages; this regexp is too slow on long lines (Bug#3441).

2009-06-17  Akinori MUSHA  <knu@iDaemons.org>  (tiny change)

	* progmodes/ruby-mode.el (ruby-parse-partial)
	(ruby-font-lock-keywords): Support overloadable negative
	operators (Bug#3587).

2009-06-17  Tiago Saboga  <tiagosaboga@gmail.com>  (tiny change)

	* files.el (save-some-buffers-action-alist): Fix last
	change (Bug#3578).

2009-06-17  Glenn Morris  <rgm@gnu.org>

	* files.el (dir-locals-set-directory-class): Fix doc typo.

2009-06-17  Kenichi Handa  <handa@m17n.org>

	* international/mule-diag.el (list-character-sets): Change
	"FINAL-CHAR" to "FINAL-BYTE" to follow the official terminology.
	(list-character-sets-1): Add one line explanation about
	"supplementary charset".  Make the part "Supplementary Character
	Sets" clickable.
